force-app/main/default/objects/Project__c/fields/Accounting_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Folder_Id__c</fullName>
    <label>Accounting Folder Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>