force-app/main/default/objects/Project__c/fields/Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Action_Date__c</fullName>
    <description>02/06/21 Indu: Added for Office List View Requirement S12-8</description>
    <label>Action Date</label>
    <type>Date</type>
</CustomField>