force-app/main/default/objects/Project__c/fields/Action_Note__c.field-meta.xml
<CustomField>
    <fullName>Action_Note__c</fullName>
    <description>02/06/21 Indu Added for Office List View for Requirement S12-8</description>
    <label>Action Note</label>
    <length>100</length>
    <type>Text</type>
</CustomField>