force-app/main/default/objects/Project__c/fields/Admin_Pay__c.field-meta.xml
<CustomField>
    <fullName>Admin_Pay__c</fullName>
    <formula>0.08*  Income_After_Expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Admin Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>