force-app/main/default/objects/Project__c/fields/Admin_Payout__c.field-meta.xml
<CustomField>
    <fullName>Admin_Payout__c</fullName>
    <description>Admin Pay in Project (Office Manager Commission in Worker Payment)</description>
    <label>Admin Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>