force-app/main/default/objects/Project__c/fields/Agreement_ID__c.field-meta.xml
<CustomField>
    <fullName>Agreement_ID__c</fullName>
    <label>Agreement Folder ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>