force-app/main/default/objects/Project__c/fields/All_Checks_Deposited__c.field-meta.xml
<CustomField>
    <fullName>All_Checks_Deposited__c</fullName>
    <formula>IF (  All_Deposit_Status__c = 5, true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All Checks Deposited?</label>
    <type>Checkbox</type>
</CustomField>