force-app/main/default/objects/Project__c/fields/All_Payment_Reconciliation_Status__c.field-meta.xml
<CustomField>
    <fullName>All_Payment_Reconciliation_Status__c</fullName>
    <formula>IF(ISPICKVAL( Repair_Status__c , &quot;Full Repair&quot;) || ISPICKVAL( Repair_Status__c , &quot;Partial Repair&quot;),
IF( Approved_Estimate__c &lt;=0,1, IF( Approved_Estimate_Payment_Reconciled__c ,1,0))+
IF( X1st_Supplement__c &lt;=0,1, IF( Supp_1_Payment_Reconciled__c ,1,0))+
IF( X2nd_Supplement__c &lt;=0,1, IF( Supp_2_Payment_Reconciled__c ,1,0))+
IF( X3rd_Supplement__c &lt;=0,1, IF( Supp_3_Payment_Reconciled__c ,1,0))+
IF( Total_Cash__c &lt;=0,1, IF( Customer_Owed_Payment_Reconciled__c ,1,0)),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All Payment Reconciliation Status</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>