force-app/main/default/objects/Project__c/fields/All_Payments_Reconciled__c.field-meta.xml
<CustomField>
    <fullName>All_Payments_Reconciled__c</fullName>
    <formula>IF (  All_Payment_Reconciliation_Status__c  = 5, true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All Payments Reconciled?</label>
    <type>Checkbox</type>
</CustomField>