force-app/main/default/objects/Project__c/fields/All_Payments_With_Office__c.field-meta.xml
<CustomField>
    <fullName>All_Payments_With_Office__c</fullName>
    <formula>IF( Are_All_The_Payments_With_Office__c = 5, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All Payments With Office?</label>
    <type>Checkbox</type>
</CustomField>