force-app/main/default/objects/Project__c/fields/Already_has_Insurance_Estimate_Y_N__c.field-meta.xml
<CustomField>
    <fullName>Already_has_Insurance_Estimate_Y_N__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Already has Insurance Estimate (Y/N)</label>
    <type>Checkbox</type>
</CustomField>