force-app/main/default/objects/Project__c/fields/Amount_Received_from_Customer__c.field-meta.xml
<CustomField>
    <fullName>Amount_Received_from_Customer__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Created for TRACKING RENTAL REIMBURSEMENT(SS-T825)</description>
    <label>Amount Received from Customer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>