force-app/main/default/objects/Project__c/fields/Approved_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Approved_Estimate__c</fullName>
    <label>Approved Estimate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>