force-app/main/default/objects/Project__c/fields/Approved_Estimate_Check_Number__c.field-meta.xml
<CustomField>
    <fullName>Approved_Estimate_Check_Number__c</fullName>
    <label>Approved Estimate: Check Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>