force-app/main/default/objects/Project__c/fields/Approved_Estimate_Date_of_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Approved_Estimate_Date_of_Confirmation__c</fullName>
    <label>Approved Estimate: Date of Confirmation</label>
    <type>Date</type>
</CustomField>