force-app/main/default/objects/Project__c/fields/Approved_Estimate_Difference__c.field-meta.xml
<CustomField>
    <fullName>Approved_Estimate_Difference__c</fullName>
    <formula>IF(( Approved_Estimate__c &lt;= 0),0,( Internal_Estiimate__c - ( Approved_Estimate__c + X1st_Supplement__c + X2nd_Supplement__c + X3rd_Supplement__c )))

/*IF(( Approved_Estimate__c  &lt;= 0),0,( Internal_Estiimate__c  -   Total_Amount_Receivable__c))*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved Estimate Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>