force-app/main/default/objects/Project__c/fields/Approved_Estimate_Payment_Address__c.field-meta.xml
<CustomField>
    <fullName>Approved_Estimate_Payment_Address__c</fullName>
    <label>Approved Estimate: Payment Address</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Address_Global_Value_Set</valueSetName>
    </valueSet>
</CustomField>