force-app/main/default/objects/Project__c/fields/Approved_Estimate_Payment_Reconciled__c.field-meta.xml
<CustomField>
    <fullName>Approved_Estimate_Payment_Reconciled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved Estimate: Payment Reconciled?</label>
    <type>Checkbox</type>
</CustomField>