force-app/main/default/objects/Project__c/fields/Approved_Estimate_Payment_With_Office__c.field-meta.xml
<CustomField>
    <fullName>Approved_Estimate_Payment_With_Office__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved Estimate: Payment With Office?</label>
    <type>Checkbox</type>
</CustomField>