force-app/main/default/objects/Project__c/fields/ApprovedEstimate_Payment_Deposited__c.field-meta.xml
<CustomField>
    <fullName>ApprovedEstimate_Payment_Deposited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved Estimate: Payment Deposited?</label>
    <type>Checkbox</type>
</CustomField>