force-app/main/default/objects/Project__c/fields/Approx_Value__c.field-meta.xml
<CustomField>
    <fullName>Approx_Value__c</fullName>
    <label>Approx. Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>