force-app/main/default/objects/Project__c/fields/Are_All_The_Payments_With_Office__c.field-meta.xml
<CustomField>
    <fullName>Are_All_The_Payments_With_Office__c</fullName>
    <formula>IF(ISPICKVAL( Repair_Status__c , &quot;Full Repair&quot;)  ||  ISPICKVAL( Repair_Status__c , &quot;Partial Repair&quot;)  , 
IF( Approved_Estimate__c &lt;=0,1, IF(  Approved_Estimate_Payment_With_Office__c  ,1,0))+
IF( X1st_Supplement__c &lt;=0,1, IF( Supp_1_Payment_With_Office__c ,1,0))+
IF( X2nd_Supplement__c &lt;=0,1, IF( Supp_2_Payment_With_Office__c ,1,0))+
IF( X3rd_Supplement__c &lt;=0,1, IF( Supp_3_Payment_With_Office__c ,1,0))+
IF( Total_Cash__c &lt;=0,1, IF(  Customer_Owed_Payment_With_Office__c  ,1,0)),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Are All The Payments With Office?</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>