force-app/main/default/objects/Project__c/fields/At_Shop_Pickup_Delivery_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>At_Shop_Pickup_Delivery_Date_Time__c</fullName>
    <label>At Shop Pickup/Delivery Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>