force-app/main/default/objects/Project__c/fields/Begin_Repair_for_ROs__c.field-meta.xml
<CustomField>
    <fullName>Begin_Repair_for_ROs__c</fullName>
    <formula>Hatch_Begin_Repair__c  ||  Hood_Begin_Repair__c ||  Left_Fender_Begin_Repair__c || Left_Front_Begin_Repair__c || Left_Quarter_Begin_Repair__c || Left_Rail_Begin_Repair__c || Left_Rear_Begin_Repair__c || Right_Fender_Begin_Repair__c || Right_Front_Begin_Repair__c || Right_Quarter_Begin_Repair__c || Right_Rail_Begin_Repair__c || Right_Rear_Begin_Repair__c || Roof_Begin_Repair__c || Windshield_Begin_Repair__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Begin Repair for ROs</label>
    <type>Checkbox</type>
</CustomField>