force-app/main/default/objects/Project__c/fields/Body_Shop__c.field-meta.xml
<CustomField>
    <fullName>Body_Shop__c</fullName>
    <label>Body Shop</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>