force-app/main/default/objects/Project__c/fields/Body_Shop_Acknowledge__c.field-meta.xml
<CustomField>
    <fullName>Body_Shop_Acknowledge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Body Shop Acknowledge</label>
    <type>Checkbox</type>
</CustomField>