force-app/main/default/objects/Project__c/fields/Body_Shop_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Body_Shop_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Body Shop : Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projectsn3rH</relationshipName>
    <type>Lookup</type>
</CustomField>