force-app/main/default/objects/Project__c/fields/Body_Shop_Duration__c.field-meta.xml
<CustomField>
    <fullName>Body_Shop_Duration__c</fullName>
    <formula>(floor((  Body_Shop_End_Date_Time__c  -  Body_Shop_Start_Date_Time__c  )*24))
+
((((( Body_Shop_End_Date_Time__c - Body_Shop_Start_Date_Time__c  )*24)-floor(( Body_Shop_End_Date_Time__c - Body_Shop_Start_Date_Time__c  )*24))*60)/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Body Shop Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>