force-app/main/default/objects/Project__c/fields/Body_Shop_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Body_Shop_End_Date__c</fullName>
    <label>Body Shop End Date</label>
    <type>Date</type>
</CustomField>