force-app/main/default/objects/Project__c/fields/CaptureLatest_Sms_call_created_dateTime__c.field-meta.xml
<CustomField>
    <fullName>CaptureLatest_Sms_call_created_dateTime__c</fullName>
    <description>02/06/15:Addded to Display Last Call/SMS Date</description>
    <label>Last Sms/Call Date</label>
    <type>DateTime</type>
</CustomField>