force-app/main/default/objects/Project__c/fields/CaptureLatest_Sms_call_type__c.field-meta.xml
<CustomField>
    <fullName>CaptureLatest_Sms_call_type__c</fullName>
    <description>02/04/2021 Created to Display the Last created sms/call Type on Office List View</description>
    <label>Last Call SMS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>