force-app/main/default/objects/Project__c/fields/Cleared_At_Bank__c.field-meta.xml
<CustomField>
    <fullName>Cleared_At_Bank__c</fullName>
    <description>Workflow Sub Stage Cleared at bank updated date</description>
    <label>Cleared At Bank</label>
    <type>Date</type>
</CustomField>