force-app/main/default/objects/Project__c/fields/Commission_Payout_Folder_ID__c.field-meta.xml
<CustomField>
    <fullName>Commission_Payout_Folder_ID__c</fullName>
    <label>Commission Payout Folder ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>