force-app/main/default/objects/Project__c/fields/Communicated_with__c.field-meta.xml
<CustomField>
    <fullName>Communicated_with__c</fullName>
    <description>Created for TRACKING RENTAL REIMBURSEMENT(SS-T825)</description>
    <label>Communicated with</label>
    <length>255</length>
    <type>Text</type>
</CustomField>