force-app/main/default/objects/Project__c/fields/Consulting_Fee__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Fee__c</fullName>
    <defaultValue>250</defaultValue>
    <label>Consulting Fee</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>