force-app/main/default/objects/Project__c/fields/Contract_Info_Verification__c.field-meta.xml
<CustomField>
    <fullName>Contract_Info_Verification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VIN Added</label>
    <type>Checkbox</type>
</CustomField>