force-app/main/default/objects/Project__c/fields/Contract_Info_Verification_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Info_Verification_End_Date__c</fullName>
    <label>VIN Added End Date</label>
    <type>DateTime</type>
</CustomField>