force-app/main/default/objects/Project__c/fields/Contract_Infor_Verification_Duration__c.field-meta.xml
<CustomField>
    <fullName>Contract_Infor_Verification_Duration__c</fullName>
    <formula>Contract_Info_Verification_End_Date__c - Contract_Info_Verification_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIN Added Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>