force-app/main/default/objects/Project__c/fields/Cracked_Paint__c.field-meta.xml
<CustomField>
    <fullName>Cracked_Paint__c</fullName>
    <label>Cracked Paint</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>