force-app/main/default/objects/Project__c/fields/Current_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Sub_Status__c</fullName>
    <description>Shows current on going sub stages.</description>
    <label>Current Sub-Status</label>
    <type>TextArea</type>
</CustomField>