force-app/main/default/objects/Project__c/fields/Customer_Owed__c.field-meta.xml
<CustomField>
    <fullName>Customer_Owed__c</fullName>
    <inlineHelpText>This amount is not added to Total Cash</inlineHelpText>
    <label>Customer out of pocket</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>