force-app/main/default/objects/Project__c/fields/Customer_Owed_Check_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Owed_Check_Number__c</fullName>
    <label>Customer Owed: Check Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>