force-app/main/default/objects/Project__c/fields/Customer_Owed_Date_of_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Customer_Owed_Date_of_Confirmation__c</fullName>
    <label>Customer Owed: Date of Confirmation</label>
    <type>Date</type>
</CustomField>