force-app/main/default/objects/Project__c/fields/Customer_Owed_Payment_Deposited__c.field-meta.xml
<CustomField>
    <fullName>Customer_Owed_Payment_Deposited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Owed: Payment Deposited?</label>
    <type>Checkbox</type>
</CustomField>