force-app/main/default/objects/Project__c/fields/Customer_Owed_Payment_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Customer_Owed_Payment_Recipient__c</fullName>
    <label>Customer Owed: Payment Recipient</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Recipient_Global_Value_Set</valueSetName>
    </valueSet>
</CustomField>