force-app/main/default/objects/Project__c/fields/Customer_Owed_Payment_With_Office__c.field-meta.xml
<CustomField>
    <fullName>Customer_Owed_Payment_With_Office__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Owed: Payment With Office?</label>
    <type>Checkbox</type>
</CustomField>