force-app/main/default/objects/Project__c/fields/Customer_Satisfaction_Form_Sent__c.field-meta.xml
<CustomField>
    <fullName>Customer_Satisfaction_Form_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Satisfaction Form Sent?</label>
    <type>Checkbox</type>
</CustomField>