force-app/main/default/objects/Project__c/fields/Date_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Received__c</fullName>
    <description>Created for TRACKING RENTAL REIMBURSEMENT(SS-T825)</description>
    <label>Date Received</label>
    <type>Date</type>
</CustomField>