force-app/main/default/objects/Project__c/fields/Deductible_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Rebate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Deductible Rebate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>