force-app/main/default/objects/Project__c/fields/Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Status__c</fullName>
    <label>Delivery Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment Verification</fullName>
            </value>
            <value>
                <fullName>Customer Contacted</fullName>
            </value>
            <value>
                <fullName>Vehicle Returned</fullName>
            </value>
            <value>
                <fullName>Rental Return</fullName>
            </value>
            <value>
                <fullName>Payment Received</fullName>
                <isActive>false</isActive>
                <label>Payment Received</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>