force-app/main/default/objects/Project__c/fields/Detail_Acknowledge__c.field-meta.xml
<CustomField>
    <fullName>Detail_Acknowledge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>I acknowledge the work done to be of high quality for Detail Backend field</description>
    <inlineHelpText>I acknowledge the work done to be of high quality for Detail</inlineHelpText>
    <label>Detail Acknowledge</label>
    <type>Checkbox</type>
</CustomField>