force-app/main/default/objects/Project__c/fields/Detail_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Detail_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Detail: Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects5</relationshipName>
    <type>Lookup</type>
</CustomField>