force-app/main/default/objects/Project__c/fields/Detail_Duration__c.field-meta.xml
<CustomField>
    <fullName>Detail_Duration__c</fullName>
    <formula>(floor((  Details_End_Date__c  - Detail_Start_Date__c)*24))
+
(((((Details_End_Date__c- Detail_Start_Date__c)*24)-floor((Details_End_Date__c- Detail_Start_Date__c)*24))*60)/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Detail Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>