force-app/main/default/objects/Project__c/fields/Detail_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Detail_Start_Date__c</fullName>
    <label>Detail Start Date</label>
    <type>DateTime</type>
</CustomField>