force-app/main/default/objects/Project__c/fields/Detail_User_LoggedIn_Flag__c.field-meta.xml
<CustomField>
    <fullName>Detail_User_LoggedIn_Flag__c</fullName>
    <formula>IF( Detail_Assigned_To__c =  $User.Id, 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Detail User LoggedIn Flag</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>