force-app/main/default/objects/Project__c/fields/Details_Cost__c.field-meta.xml
<CustomField>
    <fullName>Details_Cost__c</fullName>
    <defaultValue>30</defaultValue>
    <label>Details Payout</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>