force-app/main/default/objects/Project__c/fields/Details_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Details_End_Date__c</fullName>
    <label>Details End Date</label>
    <type>DateTime</type>
</CustomField>