force-app/main/default/objects/Project__c/fields/Donzel_Pay__c.field-meta.xml
<CustomField>
    <fullName>Donzel_Pay__c</fullName>
    <description>Donzel Pay in Project (President Commission in Worker Payment)</description>
    <label>Donzel Payout</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>