force-app/main/default/objects/Project__c/fields/Donzel_Payout__c.field-meta.xml
<CustomField>
    <fullName>Donzel_Payout__c</fullName>
    <formula>Income_After_Payout__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donzel Payout</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>