force-app/main/default/objects/Project__c/fields/Duration_I_S__c.field-meta.xml
<CustomField>
    <fullName>Duration_I_S__c</fullName>
    <formula>IF(
	ISBLANK(I_S_Substage_Created_Date__c),
	&quot;00:00&quot;,
	IF(FLOOR((NOW() - I_S_Substage_Created_Date__c) * 24)&lt;9,&quot;0&quot; &amp; TEXT(FLOOR((NOW() - I_S_Substage_Created_Date__c) * 24)),TEXT(FLOOR((NOW() - I_S_Substage_Created_Date__c) * 24)))
	&amp;&quot;:&quot;&amp;
	IF((FLOOR(((NOW() - I_S_Substage_Created_Date__c) * 24 - FLOOR((NOW() - I_S_Substage_Created_Date__c) * 24))* 60))&lt;=9,&quot;0&quot;&amp;Text(FLOOR(((NOW() - I_S_Substage_Created_Date__c) * 24 - FLOOR((NOW() - I_S_Substage_Created_Date__c) * 24))* 60)),Text(FLOOR(((NOW() - I_S_Substage_Created_Date__c) * 24 - FLOOR((NOW() - I_S_Substage_Created_Date__c) * 24))* 60)))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration I&amp;S</label>
    <type>Text</type>
</CustomField>