force-app/main/default/objects/Project__c/fields/Email_Attachments_Folder_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_Attachments_Folder_ID__c</fullName>
    <description>Fetch the email attachment folderId and store in field</description>
    <label>Email Attachments Folder ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>