force-app/main/default/objects/Project__c/fields/Email_sent_to_G_G__c.field-meta.xml
<CustomField>
    <fullName>Email_sent_to_G_G__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used in backend</description>
    <label>Email sent to G&amp;G?</label>
    <type>Checkbox</type>
</CustomField>