force-app/main/default/objects/Project__c/fields/Escalate_to_Management_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Escalate_to_Management_Reasons__c</fullName>
    <label>Escalate to Management Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Global_Escalate_to_Management_Reasons</valueSetName>
    </valueSet>
</CustomField>