force-app/main/default/objects/Project__c/fields/Estimate_and_Supp_Files_URL__c.field-meta.xml
<CustomField>
    <fullName>Estimate_and_Supp_Files_URL__c</fullName>
    <label>Estimate and Supp. Files Folder ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>