force-app/main/default/objects/Project__c/fields/Estimate_and_Supp_Files_URL_Formula__c.field-meta.xml
<CustomField>
    <fullName>Estimate_and_Supp_Files_URL_Formula__c</fullName>
    <formula>HYPERLINK(&apos;https://drive.google.com/drive/u/2/folders/&apos;&amp;Estimate_and_Supp_Files_URL__c,&apos;Click to see the estimate and supp. files&apos;, &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimate and Supp. Files URL</label>
    <type>Text</type>
</CustomField>