force-app/main/default/objects/Project__c/fields/Estimate_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Approval_Date__c</fullName>
    <description>Estimate Approval (Keys in hand) Commission - worker payment creation date</description>
    <label>Estimate Approval Date</label>
    <type>Date</type>
</CustomField>